deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-hello-world-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - php-hello-world.gusek.info
      secretName: wildcard-apps 
  rules:
    - host: php-hello-world.gusek.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-hello-world-service
                port:
                  number: 8080
